# online_disk

./: __TODO__  run.sh
src_api/: Cargo.toml
src_api/src/: TODO  main.rs  server.rs
src_api/src/_doc/: _Stare  impl Trait  lintery  max_files_per_directory  struct.txt
src_api/src/filesystem/: mod.rs
src_api/src/filesystem/blob/: fs.rs  fs_mock.rs  key_value.rs  key_value_mock.rs  mod.rs
src_api/src/filesystem/data/: dir.rs  file.rs  mod.rs  node.rs
src_api/src/filesystem/head/: mod.rs
src_api/src/filesystem/utils/: hash.rs  hash_by_content.rs  mod.rs  save_file.rs
src_api/src/server/: mod.rs  server.rs  server_template.rs
src_api/src/server/utils/: match_str.rs  mod.rs  response_helpers.rs  server.rs  set_header.rs  static_file.rs  url_router.rs
src_app/: .babelrc  .eslintrc  .flowconfig  TODO  build.sh  package.json  tsconfig.json  webpack.js
src_app/src/: __doc__  index.html  index.js  index.tsx
src_app/src/Api/: index.js
src_app/src/Icon/: folder.js.js  url
src_app/src/Store/: DirStore.js  HeadStore.js  HeadStore.ts  PathStore.js  PathStore.ts  Type.js  Type.ts  index.js  index.ts
src_app/src/Utils/: DropFiles.js  DropFiles.ts
src_app/src/View/: App.js  App.tsx  DirAdd.js  DirList.js  DirList.tsx  DirListItem.js  DirListItem.tsx  DirListItemName.js  DirListItemName.tsx  Path.js  Path.tsx  PathItem.js  PathItem.tsx
src_backend/: .gitignore  Cargo.toml
src_backend/src/: main.rs  server.rs
src_backend/src/_doc/: RLS  _Stare
src_backend/src/blob/: fs_mock.rs  key_value.rs  key_value_mock.rs  mod.rs  types.rs
(+47 files in other folders)
