[package]
name = "online_disk"
version = "0.1.0"
authors = ["Grzegorz Szeliga <szeligagrzegorz@gmail.com>"]

[dependencies]
rust-crypto = "0.2.36"
serde = "1.0.21"
serde_json = "1.0.6"
serde_derive = "1.0.21"
chrono = "0.4.0"
futures = "0.1.14"
hyper = "0.12"
tokio-core="0.1.10"
tokio-fs = "0.1.0"
tokio-io = "0.1.6"
